# glfwm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README  README.md  index.html  params.json
cmake/: glfwmConfig.cmake.in
cmake/Modules/: FindGLFW.cmake
example/: CMakeLists.txt  main.cpp
examples/simple_no_install/: CMakeLists.txt  main.cpp
examples/simple_with_install/: CMakeLists.txt  main.cpp
include/GLFWM/: common.hpp  drawable.hpp  enums.hpp  event.hpp  event_handler.hpp  glfwm.hpp  update_map.hpp  utility.hpp  window.hpp  window_group.hpp
include/glfwm/: common.hpp  drawable.hpp  enums.hpp  event.hpp  event_handler.hpp  glfwm.hpp  update_map.hpp  utility.hpp  window.hpp  window_group.hpp
src/: drawable.cpp  enums.cpp  event.cpp  glfwm.cpp  update_map.cpp  utility.cpp  window.cpp  window_group.cpp
